fix: add docs configuration models
